# gyro

./: AUTHORS  CMakeLists.txt  Makefile  README  configure  gyro.ino
arduino_api/: Makefile
arduino_api/src/: IPAddress.cpp  IPAddress.h  UtilTime.cpp  fast_gpio_sc.c  fast_gpio_sc.h  interrupt.c  ledsensor.c  ledsensor.h  sysfs.c  wiring_analog.c
include/: accelero.hh  main.hh  motors.hh  pid.hh
include/arduino_api/: Mux.h  ledsensor.h  variant.h
src/: accelero.cc  main.cc  motors.cc  pid.cc  wifi.cc
src/arduino_api/: PID_v1.cpp  Wire.cc  i2c.c  ledsensor.cc  mux.c  variant.cc  wiring_digital.c
test/: test_accelero.cc  test_motors.cc
